--- a/planarviewer/war/planar-panoramic.html
+++ b/planarviewer/war/planar-panoramic.html
@@ -8,6 +8,6 @@
 
   <body>
     <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
-	<label> AND DISPLAY THE PLANAR PANORAMIC ! </label> <br>
+	<!--<label> AND DISPLAY THE PLANAR PANORAMIC ! </label> <br>-->
   </body>
 </html>
